force-app-unpackaged-objects/main/default/objects/Volunteer_Role__c/Volunteer_Role__c.object-meta.xml
<CustomObject>
    <description>A reusable volunteer role definition shared across Volunteer Jobs and Campaigns. Hosts the attributes intrinsic to the work itself, plus defaults the Job can override.</description>
    <label>Volunteer Role</label>
    <nameField>
        <label>Volunteer Role Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Volunteer Roles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>