force-app-unpackaged-objects/main/default/objects/Volunteer_Role__c/fields/Accommodations_Available__c.field-meta.xml
<CustomField>
    <fullName>Accommodations_Available__c</fullName>
    <label>Accommodations Available</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>