force-app-unpackaged-objects/main/default/objects/Volunteer_Role__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Retire a role without touching historical Jobs.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>