force-app-unpackaged-objects/main/default/objects/Volunteer_Role__c/fields/Adult_Supervision_Age__c.field-meta.xml
<CustomField>
    <fullName>Adult_Supervision_Age__c</fullName>
    <description>Volunteers younger than this need an adult on the same shift. Distinct from Minimum Age.</description>
    <label>Adult Supervision Age</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>