force-app-unpackaged-objects/main/default/objects/Volunteer_Role__c/fields/Background_Check_Required__c.field-meta.xml
<CustomField>
    <fullName>Background_Check_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Background Check Required</label>
    <type>Checkbox</type>
</CustomField>