force-app-unpackaged-objects/main/default/objects/Volunteer_Role__c/fields/Banner_Image__c.field-meta.xml
<CustomField>
    <fullName>Banner_Image__c</fullName>
    <label>Banner Image</label>
    <length>255</length>
    <type>Text</type>
</CustomField>