force-app-unpackaged-objects/main/default/objects/Volunteer_Role__c/fields/Excerpt__c.field-meta.xml
<CustomField>
    <fullName>Excerpt__c</fullName>
    <label>Excerpt</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>