force-app-unpackaged-objects/main/default/objects/Volunteer_Role__c/fields/FAQ__c.field-meta.xml
<CustomField>
    <fullName>FAQ__c</fullName>
    <label>FAQ</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>