force-app-unpackaged-objects/main/default/objects/Volunteer_Role__c/fields/Indoor_Outdoor__c.field-meta.xml
<CustomField>
    <fullName>Indoor_Outdoor__c</fullName>
    <label>Indoor or Outdoor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Indoor</fullName>
            </value>
            <value>
                <fullName>Outdoor</fullName>
            </value>
            <value>
                <fullName>Mixed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>