force-app-unpackaged-objects/main/default/objects/Volunteer_Role__c/fields/Physical_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Physical_Requirements__c</fullName>
    <label>Physical Requirements</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>