force-app-unpackaged-objects/main/default/objects/Volunteer_Role__c/fields/Preferred_Skills__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Skills__c</fullName>
    <description>Helpful but not required. Rendered below the hard requirements.</description>
    <label>Preferred Skills</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Computer usage</fullName>
            </value>
            <value>
                <fullName>Manual Labor</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Fundraising</fullName>
            </value>
            <value>
                <fullName>Event Planning</fullName>
            </value>
            <value>
                <fullName>Landscaping</fullName>
            </value>
            <value>
                <fullName>basic accounting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>