force-app-unpackaged-objects/main/default/objects/Volunteer_Role__c/fields/Remote__c.field-meta.xml
<CustomField>
    <fullName>Remote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remote</label>
    <type>Checkbox</type>
</CustomField>