force-app-unpackaged-objects/main/default/objects/Volunteer_Role__c/fields/Requirements__c.field-meta.xml
<CustomField>
    <fullName>Requirements__c</fullName>
    <description>Qualifications and expectations for this role.</description>
    <label>Requirements</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>