force-app-unpackaged-objects/main/default/objects/Volunteer_Role__c/fields/Role_Icon__c.field-meta.xml
<CustomField>
    <fullName>Role_Icon__c</fullName>
    <description>Icon URL rendered on role cards.</description>
    <label>Role Icon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>