force-app-unpackaged-objects/main/default/objects/Volunteer_Role__c/fields/Service_Hours_Letter_Available__c.field-meta.xml
<CustomField>
    <fullName>Service_Hours_Letter_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service Hours Letter Available</label>
    <type>Checkbox</type>
</CustomField>