force-app-unpackaged-objects/main/default/objects/Volunteer_Role__c/fields/Skills_Needed__c.field-meta.xml
<CustomField>
    <fullName>Skills_Needed__c</fullName>
    <description>Required skills. Mirrors the V4S Skills Needed value set to preserve INCLUDES filtering.</description>
    <label>Skills Needed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Computer usage</fullName>
            </value>
            <value>
                <fullName>Manual Labor</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Fundraising</fullName>
            </value>
            <value>
                <fullName>Event Planning</fullName>
            </value>
            <value>
                <fullName>Landscaping</fullName>
            </value>
            <value>
                <fullName>basic accounting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>