force-app-unpackaged-objects/main/default/objects/Volunteer_Role__c/fields/Testimonial_Attribution__c.field-meta.xml
<CustomField>
    <fullName>Testimonial_Attribution__c</fullName>
    <label>Testimonial Attribution</label>
    <length>120</length>
    <type>Text</type>
</CustomField>