force-app-unpackaged-objects/main/default/objects/Volunteer_Role__c/fields/Testimonial_Quote__c.field-meta.xml
<CustomField>
    <fullName>Testimonial_Quote__c</fullName>
    <label>Testimonial Quote</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>