force-app-unpackaged-objects/main/default/objects/Volunteer_Role__c/fields/Training_Required__c.field-meta.xml
<CustomField>
    <fullName>Training_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Training Required</label>
    <type>Checkbox</type>
</CustomField>