force-app-unpackaged-objects/main/default/objects/Volunteer_Role__c/fields/Training_URL__c.field-meta.xml
<CustomField>
    <fullName>Training_URL__c</fullName>
    <label>Training URL</label>
    <type>Url</type>
</CustomField>