force-app-unpackaged-objects/main/default/objects/Volunteer_Role__c/fields/Typical_Time_Commitment__c.field-meta.xml
<CustomField>
    <fullName>Typical_Time_Commitment__c</fullName>
    <description>Descriptive, not a rollup. For example: 3-hour shifts, standing.</description>
    <label>Typical Time Commitment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>