force-app-unpackaged-objects/main/default/objects/Volunteer_Role__c/fields/Waiver_Language__c.field-meta.xml
<CustomField>
    <fullName>Waiver_Language__c</fullName>
    <description>The legal text a volunteer agrees to for this role. The content rendered inside the waiver form named by Waiver Form.</description>
    <label>Waiver / Release Language</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>