force-app-unpackaged-objects/main/default/objects/Volunteer_Role__c/fields/What_to_Wear__c.field-meta.xml
<CustomField>
    <fullName>What_to_Wear__c</fullName>
    <label>What to Wear</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>