force-app-unpackaged-objects/main/default/objects/Volunteer_Role__c/fields/What_We_Provide__c.field-meta.xml
<CustomField>
    <fullName>What_We_Provide__c</fullName>
    <label>What We Provide</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>